all src files to src dir
Signed-off-by: OlyaKnyaz-Labs <Gfhjkm-2019>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(quiz_runner)
 
 set(CMAKE_CXX_STANDARD 20)
 
-add_executable(quiz_runner main.cpp)
+add_executable(quiz_runner main.cpp src/Check.cpp src/Check.h src/Menu.cpp src/Menu.h src/Body.cpp src/Body.h)
