add src dir to travis file
Signed-off-by: OlyaKnyaz-Labs <Gfhjkm-2019>

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,3 +12,5 @@ matrix:
 
 script:
   - git ls-files src/!*.txt | xargs clang-format -i && git diff --exit-code
+  - cd src
+  - git ls-files | xargs clang-format -i && git diff --exit-code
