add test dir to travis
Signed-off-by: OlyaKnyaz-Labs <Gfhjkm-2019>

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,3 +14,7 @@ script:
   - git ls-files txt/!*.txt | xargs clang-format -i && git diff --exit-code
   - cd src
   - git ls-files | xargs clang-format -i && git diff --exit-code
+  - cd ..
+  - cd tests
+  - git ls-files | xargs clang-format -i && git diff --exit-code
+  -
