--- a/.travis.yml
+++ b/.travis.yml
@@ -11,4 +11,4 @@ script:
   - cd tests
   - git ls-files */googletest/* | xargs clang-format -i && git diff --exit-code
   - ./install.sh
-  - Gtests.exe
+  - ./Gtests.exe
