--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,8 @@ script:
   - cd src
   - git ls-files | xargs clang-format -i && git diff --exit-code
   - cd ..
+  - cmake CMakeLists.txt
+  - make
   - cd tests
   - git ls-files */googletest/* | xargs clang-format -i && git diff --exit-code
   - ./install.sh
